--- a/2017_syllabus.bib
+++ b/2017_syllabus.bib
@@ -84,4 +84,30 @@
   url       = {http://warontherocks.com/2015/03/the-seductiveness-of-special-ops/?singlepage=1},
 }
 
+@Article{dixon1989,
+  author  = {Howard Lee Dixon},
+  title   = {Low-Intensity Conflict: Overview, Definitions, and Policy Concerns},
+  journal = {Army-Air Force Center for Low-Intensity Conflict},
+  year    = {1989},
+  pages   = {10-28},
+}
+
+@Article{olson2011,
+  author    = {Eric T. Olson},
+  title     = {A Balanced Approach to Irregular Warfare},
+  journal   = {Irregular Warfare: A SOF Perspective},
+  year      = {2011},
+  city      = {Fort Leavenworth},
+  publisher = {Center for Army Lessons Learned},
+}
+
+@Article{gray2007,
+  author  = {Colin S. Gray},
+  title   = {Irregular Warfare: One Nature, Many Characters},
+  journal = {Strategi Studies Quarterly},
+  year    = {2007},
+  pages   = {39-45},
+  month   = {Winter},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
