--- a/2017_syllabus2.bib
+++ b/2017_syllabus2.bib
@@ -189,17 +189,6 @@
   journal   = {The Army and Low Intensity Conflict},
 }
 
-@InBook{jackson2009,
-  chapter   = {The Fifth Service: The Rise of Special Operations Command},
-  pages     = {145-152},
-  title     = {US Military Innovation since the Cold War: Creation without Destruction},
-  publisher = {Routledge},
-  year      = {2009},
-  author    = {Colin Jackson and Austin Long},
-  editor    = {Harvey M. Sapolsky and Benjamin H. Friedman and Brendan Rittenhouse Green},
-  address   = {New York},
-}
-
 @Article{gray1999,
   author  = {Colin S. Gray},
   title   = {Handfuls of Heroes on Desperate Adventures: When do Special Operations Succeed?},
@@ -320,6 +309,352 @@
   author = {Gordon H. McCormick},
   title  = {The Diamond Model of Insurgency},
   note   = {This is the Diamond Model of Insurgency first described by Dean Gordon H. McCormick at the Naval Postgraduate School. This model has been taught by Dean McCormick for at least the past decade in one form or another (as of 2013).},
+}
+
+@MastersThesis{gaugush2013,
+  author       = {Gaugush, David and Merkl, Gregory and Thompson, Nicholas},
+  title        = {Mapping populations: an objective measurement of revolutionary dynamics},
+  year         = {2013},
+  address      = {Monterey, CA},
+  month        = {June},
+  copyright    = {This publication is a work of the U.S. Government as defined in Title 17, United States Code, Section 101. As such, it is in the public domain, and under the provisions of Title 17, United States Code, Section 105, may not be copyrighted.},
+  keywords     = {Population map},
+  organization = {Fox, William P.},
+  publisher    = {Naval Postgraduate School},
+}
+
+@InBook{prados2006,
+  chapter   = {Chapter 10: The War for the Roof of the World},
+  title     = {Safe for Democracy: The Secret Wars of the CIA},
+  publisher = {Rowman \& Littlefield},
+  year      = {2006},
+  author    = {Prados, John},
+}
+
+@Article{kydd2006,
+  author    = {Kydd, Andrew H and Walter, Barbara F},
+  title     = {The strategies of terrorism},
+  journal   = {International Security},
+  year      = {2006},
+  volume    = {31},
+  number    = {1},
+  pages     = {49--80},
+  publisher = {MIT Press},
+}
+
+@Article{cronin2006,
+  author    = {Cronin, Audrey Kurth},
+  title     = {How al-Qaida ends: The decline and demise of terrorist groups},
+  journal   = {International Security},
+  year      = {2006},
+  volume    = {31},
+  number    = {1},
+  pages     = {7--48},
+  publisher = {MIT Press},
+}
+
+@Article{kitfield2014,
+  author  = {James Kitfield},
+  title   = {Inside America's Shadow War on Terror--and Why It Will Never End},
+  journal = {The National Journal},
+  year    = {2014},
+  month   = {May},
+}
+
+@Book{mcraven1996,
+  title     = {Spec ops: Case studies in special operations warfare: Theory and practice},
+  publisher = {Presidio Press},
+  year      = {1996},
+  author    = {McRaven, William H},
+}
+
+@Article{johnston2012,
+  author    = {Johnston, Patrick B},
+  title     = {Does decapitation work? Assessing the effectiveness of leadership targeting in counterinsurgency campaigns},
+  journal   = {International Security},
+  year      = {2012},
+  volume    = {36},
+  number    = {4},
+  pages     = {47--79},
+  publisher = {MIT Press},
+}
+
+@Article{flynn2008,
+  author  = {Michael T. Flynn and Rich Juergens and thomas L. Cantrell},
+  title   = {Employing ISR: SOF Best Practices},
+  journal = {Joint Forces Quarterly},
+  year    = {2008},
+  volume  = {50},
+}
+
+@Article{witty2011,
+  author    = {David M. Witty},
+  title     = {The Great UW Debate},
+  journal   = {Irregular Warfare: A SOF Perspective},
+  year      = {2011},
+  pages     = {35-43},
+  address   = {Fort Leavenworth},
+  publisher = {Center for Army Lessons Learned},
+}
+
+@InBook{petit2013a,
+  chapter   = {Understanding Phase Zero},
+  pages     = {53-72},
+  title     = {Going Big by Getting Small: The Application of Operational Art by Special Operations in Phase Zero},
+  publisher = {Outskirts Press, Inc.},
+  year      = {2013},
+  author    = {Brian S. Petit},
+  address   = {Denver},
+  journal   = {Going Big by Getting Small: The Application of Operational Art by Special Operations in Phase Zero},
+}
+
+@Article{mulbury2008,
+  author  = {John Mulbury},
+  title   = {ARSOF, General Purpose Forces, and FID: Who Does What, Where, and When?},
+  journal = {Special Warfare},
+  year    = {2008},
+  volume  = {21},
+  number  = {1},
+  pages   = {18-21},
+}
+
+@Article{lewis2013,
+  author  = {Steve Lewis},
+  title   = {An Unconventional Role for Civil Affairs},
+  journal = {Special Warfare},
+  year    = {2013},
+  volume  = {26},
+  number  = {3},
+  pages   = {15-18},
+}
+
+@Article{han2012,
+  author  = {Jeffrey S. Han and Brion D. Youtz},
+  title   = {Grains of Truth: The Role of Civil-Military Support in Elements in Special Operations},
+  journal = {Special Warfare},
+  year    = {2012},
+  volume  = {25},
+  number  = {3},
+  pages   = {40-45},
+}
+
+@Article{boyd2011,
+  author  = {Curtis Boyd},
+  title   = {The Future of MISO},
+  journal = {Special Warfare},
+  year    = {2011},
+  volume  = {24},
+  number  = {1},
+  pages   = {22-28},
+}
+
+@InBook{paddock2002,
+  chapter   = {Chapter 3: Unconventional Warfare in World War II},
+  pages     = {25-37},
+  title     = {U.S. Army Special Warfare: Its Origins},
+  publisher = {University Press of Kansas},
+  year      = {2002},
+  author    = {Alfred H. Paddock},
+}
+
+@InBook{long2012a,
+  chapter   = {Chapter 4: South Vietnam},
+  pages     = {55-75},
+  title     = {Locals Rule: Historical Lessons for Creating Local Defense Forces for Afghanistan and Beyond},
+  publisher = {RAND},
+  year      = {2012},
+  author    = {Austin Long},
+  address   = {Santa Monica},
+}
+
+@InBook{asfura2014,
+  chapter   = {Executive Summary},
+  pages     = {iii-vii},
+  title     = {Risky Business: The Future of Civil Defense Forces and Counterterrorism in an Era of Persistent Conflict},
+  publisher = {CNA},
+  year      = {2014},
+  author    = {Patricio Asfura-Heim},
+  month     = {oct},
+}
+
+@InBook{radvanyi2000,
+  chapter   = {Operation Eagle Claw},
+  title     = {Lessons Learned},
+  publisher = {United States Marine Corps Command and Staff College},
+  year      = {2000},
+  author    = {Richard Radvanyi},
+  address   = {Quantico},
+}
+
+@InBook{marquis2011,
+  chapter   = {Chapter 5: Urgent Fury},
+  pages     = {91-106},
+  title     = {Unconventional Warfare: Rebuilding US Special Operation Forces},
+  publisher = {Brookings Institution Press},
+  year      = {2011},
+  author    = {Marquis, Susan},
+}
+
+@InBook{robinson2005,
+  chapter   = {Chapter 3: Just Cause},
+  pages     = {37-56},
+  title     = {Masters of Chaos: The Secret History of the Special Forces},
+  publisher = {Public Affairs},
+  year      = {2005},
+  author    = {Robinson, Linda},
+  address   = {New York},
+}
+
+@Article{biddle2006,
+  author    = {Biddle, Stephen D},
+  title     = {Allies, airpower, and modern warfare: The Afghan model in Afghanistan and Iraq},
+  year      = {2006},
+  publisher = {MIT Press},
+}
+
+@InBook{petit2013b,
+  chapter   = {Chapter 4: Case Study},
+  pages     = {120-165},
+  title     = {Going big by getting small: The application of operational art by special operations in phase zero},
+  publisher = {Outskirts Press, Incorporated},
+  year      = {2013},
+  author    = {Brian S. Petit and Eric Thor Olson},
+  address   = {Denver},
+}
+
+@InBook{petit2013c,
+  chapter   = {Chapter 5: Analysis of Special Opertions Phase Zero Operational Art},
+  pages     = {120-165},
+  title     = {Going big by getting small: The application of operational art by special operations in phase zero},
+  publisher = {Outskirts Press, Incorporated},
+  year      = {2013},
+  author    = {Brian S. Petit and Eric Thor Olson},
+  address   = {Denver},
+}
+
+@InBook{simons2003,
+  chapter   = {The Military Advisor as Warrior-King and Other ``Going Native'' Temptations},
+  pages     = {113-133},
+  title     = {Anthropology and the United States Military: Coming of Age in the Twenty-first Century},
+  publisher = {Palgrave Macmillan},
+  year      = {2003},
+  author    = {Anna Simons},
+  editor    = {Pamela R. Freese and Margaret C. Harrell},
+  address   = {New York},
+}
+
+@Article{collins2014,
+  author  = {Joseph Collins},
+  title   = {The Rise and Fall of Major Jim Gant},
+  journal = {War on the Rocks},
+  year    = {2014},
+  url     = {http://warontherocks.com/2014/04/the-rise-and-fall-of-major-jim-gant/},
+}
+
+@InBook{long2012b,
+  chapter   = {Chapter 9: Iraq},
+  pages     = {149-163},
+  title     = {Locals Rule: Historical Lessons for Creating Local Defense Forces for Afghanistan and Beyond},
+  publisher = {RAND},
+  year      = {2012},
+  author    = {Austin Long},
+  address   = {Santa Monica},
+}
+
+@Article{connett2011,
+  author  = {Ty Connett and Bob Cassidy},
+  title   = {VSO: More than Village Defense},
+  journal = {Special Warfare},
+  year    = {2011},
+  volume  = {24},
+  number  = {3},
+  pages   = {24-27},
+}
+
+@Article{malvesti2012,
+  author  = {Michele Malvesti},
+  title   = {Policy Considerations in Combating Terrorism: Decision‐Making under Conditions of Risk and Uncertainty},
+  journal = {Occasional Paper Series},
+  year    = {2012},
+  month   = jan,
+}
+
+@Article{ferenzi2016a,
+  author = {Steve Ferenzi},
+  title  = {Memorandum: The Caliphate and Al-Qaeda’s Leadership of the Global Jihadist Movement},
+  year   = {2016},
+}
+
+@MastersThesis{ferenzi2016b,
+  author  = {Steve Ferenzi},
+  title   = {Proxy War Theory},
+  school  = {Columbia University School of International and Public Affairs},
+  year    = {2014},
+  journal = {On Proxy War (Fall 2014 SIPA Capstone)},
+}
+
+@Article{wood2015,
+  author  = {Graeme Wood},
+  title   = {What ISIS Really Wants},
+  journal = {The Atlantic},
+  year    = {2015},
+}
+
+@Article{ferenzi2016c,
+  author  = {Steve Ferenzi},
+  title   = {Beyond Half-Measures - Influencing Syria’s Political Order through Non-State Proxies},
+  journal = {Small Wars Journal},
+  year    = {2016},
+  url     = {http://smallwarsjournal.com/jrnl/art/beyond-half-measures-influencing-syria%E2%80%99s-political-order-through-non-state-proxies},
+}
+
+@Article{fox2014,
+  author  = {Fox, W and Thompson, MN},
+  title   = {Phase targeting of terrorist attacks: simplifying complexity with analytical hierarchy process},
+  journal = {International Journal of Decision Sciences},
+  year    = {2014},
+  volume  = {5},
+  pages   = {57--64},
+}
+
+@Book{lake2016,
+  title     = {The Statebuilder's Dilemma: Legitimacy, Loyalty, and the Limits of External Intervention},
+  publisher = {Ithaca, NY: Cornell University Press},
+  year      = {2016},
+  author    = {Lake, David},
+}
+
+@Book{staniland2014,
+  title     = {Networks of rebellion: Explaining insurgent cohesion and collapse},
+  publisher = {Cornell University Press},
+  year      = {2014},
+  author    = {Staniland, Paul},
+}
+
+@Article{ferenzi2016d,
+  author  = {Steve Ferenzi},
+  title   = {Want to Build a Better Proxy in Syria? Lessons from Tibet},
+  journal = {War on the Rocks},
+  year    = {2016},
+}
+
+@Article{chenoweth2011,
+  author  = {Erica Cheoweth},
+  title   = {Think Again: Nonviolent Resistance},
+  journal = {Foreign Policy},
+  year    = {2011},
+  url     = {http://foreignpolicy.com/2011/08/24/think-again-nonviolent-resistance/},
+}
+
+@Article{staniland2012,
+  author    = {Staniland, Paul},
+  title     = {States, insurgents, and wartime political orders},
+  journal   = {Perspectives on Politics},
+  year      = {2012},
+  volume    = {10},
+  number    = {2},
+  pages     = {243--264},
+  publisher = {Cambridge University Press},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
