20170815_commit yesterday's changes
commit yesterday's changes

--- a/2017_syllabus2.bib
+++ b/2017_syllabus2.bib
@@ -657,4 +657,18 @@
   publisher = {Cambridge University Press},
 }
 
+@Book{lake2016,
+  title     = {The statebuilder's dilemma: on the limits of foreign intervention},
+  publisher = {Cornell University Press},
+  year      = {2016},
+  author    = {Lake, David A},
+}
+
+@Book{mulchinock2017nato,
+  title     = {NATO and the Western Balkans: From Neutral Spectator to Proactive Peacemaker},
+  publisher = {Springer},
+  year      = {2017},
+  author    = {Mulchinock, Niall},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
